--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,30 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layoutManager="LinearLayoutManager"
         tools:layout_editor_absoluteX="1dp" />
+
+    <TextView
+        android:id="@+id/networkErrorTextViewMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:text="@string/networkErrorMessage"
+        android:textAlignment="center"
+        android:textColor="#3D6FBA"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recycler_view" />
+
+    <Button
+        android:id="@+id/retryButtonMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/retryPrompt"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/networkErrorTextViewMain"
+        app:layout_constraintStart_toStartOf="@+id/networkErrorTextViewMain"
+        app:layout_constraintTop_toBottomOf="@+id/networkErrorTextViewMain" />
 </androidx.constraintlayout.widget.ConstraintLayout>
